// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emoji: should be able to change text with emoji into decisions 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "localId": "abc-123",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
            "state": "DECIDED",
          },
          "content": Array [
            Object {
              "text": "this ",
              "type": "text",
            },
            Object {
              "attrs": Object {
                "id": "1f604",
                "shortName": ":smile:",
                "text": "😄",
              },
              "type": "emoji",
            },
            Object {
              "text": " ",
              "type": "text",
            },
          ],
          "type": "decisionItem",
        },
      ],
      "type": "decisionList",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji:should be able remove emoji on backspace 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji:should be able to click on the emoji button and select emoji 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "id": "1f605",
            "shortName": ":sweat_smile:",
            "text": "😅",
          },
          "type": "emoji",
        },
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji:should be able to select emoji inside task-decisions 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "localId": "abc-123",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
            "state": "DECIDED",
          },
          "content": Array [
            Object {
              "text": " this ",
              "type": "text",
            },
            Object {
              "attrs": Object {
                "id": "1f604",
                "shortName": ":smile:",
                "text": "😄",
              },
              "type": "emoji",
            },
            Object {
              "text": " ",
              "type": "text",
            },
          ],
          "type": "decisionItem",
        },
      ],
      "type": "decisionList",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji:should be able to use emoji inside blockquote 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "this is inside blockquote ",
              "type": "text",
            },
            Object {
              "attrs": Object {
                "id": "1f170",
                "shortName": ":a:",
                "text": "🅰",
              },
              "type": "emoji",
            },
            Object {
              "text": " ",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji:should be able to use emoji inside bulletList 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "this is inside list ",
                  "type": "text",
                },
                Object {
                  "attrs": Object {
                    "id": "1f604",
                    "shortName": ":smile:",
                    "text": "😄",
                  },
                  "type": "emoji",
                },
                Object {
                  "text": " ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`Emoji:should be able to use emoji inside orderedList 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "this is inside list ",
                  "type": "text",
                },
                Object {
                  "attrs": Object {
                    "id": "1f170",
                    "shortName": ":a:",
                    "text": "🅰",
                  },
                  "type": "emoji",
                },
                Object {
                  "text": " ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;
